# cmsopen-NanoAODProdTool

./: README.md  nanoaod-env.yaml  nanojobs-env.yaml  nanojobs.ini  pyproject.toml
src/nanoaodprodtool/: cli.py  jobs.py  list_dsets.py  meta.py  prepare.py  submit.py  test.py
src/nanoaodprodtool/script/: metadata
src/nanoaodprodtool/scripts/: merge_tree  metadata  metadata_poet
src/nanoaodprodtool/templates/: nanoaod-slc5.sh.j2  nanoaod.job.j2  nanoaod.sh.j2  poet.job.j2  poet.sh.j2
tests/: test_nanoaodprodtool.py
